Added automatic health stats, age counter

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h4>Message from <span class="species"></span>: <span id="petMessage"></span></h4>
         </div>
         <ul>
-            <li id="name">Name: <span class="species"></span></li>
+            <li id="name">Name: <span class="species"></span> Age: <span class="age"></span></li>
             <li id="health">Health: <span class="health"></span> </li>
             <li id="happiness">Happiness: <span class="happiness"></span> </li>
             <li id="hunger">Hunger: <span class="hunger"></span> </li>
